--- a/Visitka/visitka.html
+++ b/Visitka/visitka.html
@@ -15,5 +15,6 @@
     <p align="left"><a style="color:white" href="Buy.html">Где купить</a></p>
     <p align="right"><a style="color:white" href="Game.html">Где поиграть</a></p>
     <p align="center"><img src="arm2.jpg" /></p>
+    <p align="center">Версия 2.0</p>
 </body>
 </html>
